Refactor: Migrate LdapService to async/await for Novell.Directory.Ldap v4.0.0

--- a/nlog.config
+++ b/nlog.config
@@ -26,7 +26,7 @@
     <!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
 	<!-- 預設layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" -->
     <target xsi:type="File" name="ownFile-web" fileName="${LogTxtLocation2}"
-            layout="${longdate} ${logger} ${message}" />
+            layout="${longdate} ${logger} ${message} ${exception:format=tostring}" />
 
 	<!-- 目標1 -->
 	<target xsi:type="File" name="LdapUserHistoryFile" fileName="${basedir}/Logs/LdapUserHistory-log.log"
