feat(config): 導入正式環境的 DPAPI 加密設定
- (Program.cs) 新增環境判斷 (IsDevelopment/else)：
  - Development 環境：維持載入明碼 'secrets.dev.json'。
  - Production 環境：改為載入並解密 'secrets.prod.enc'。

- (API.csproj) 新增對外部共享函式庫 'Utils.DpapiProvider' 的專案參考。

- (API.csproj) 更新 'secrets.dev.json' 檔案屬性 (Content Update)：
  - 本機偵錯 (F5) 時複製 (CopyToOutputDirectory)。
  - 正式發佈 (Publish) 時永不複製 (CopyToPublishDirectory)。

- (.gitignore) 更新 .gitignore，明確忽略 'secrets.dev.json' 和 'secrets.prod.enc'，防止祕密外洩。

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,16 @@
 
 #=============自定義=============
 
-#資訊安全-敏感資料檔案
+# 資訊安全-敏感資料檔案
 appsettings.json
+appsettings.Production.json
+secrets.xml
+secrets.dev.json
+secrets.prod.enc
 
 # 忽略專案文件紀錄
 相關文件紀錄/
+批次檔/
 
 #===============================
 
